--- a/delivery.html
+++ b/delivery.html
@@ -13,17 +13,13 @@
 body{margin:0;background:#f3f6fb}
 .main{padding:15px;max-width:900px;margin:auto}
 .top-bar{display:flex;justify-content:space-between;align-items:center;background:#0f172a;color:#fff;padding:12px 16px;border-radius:14px}
-.top-bar h3{margin:0;font-size:18px}
-.icon-btn{background:#2563eb;border:none;color:#fff;width:42px;height:42px;border-radius:50%;font-size:20px;cursor:pointer;margin-left:6px}
-.status-box{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08);font-size:14px}
-.location{color:#2563eb;font-size:13px}
-.order-card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08);display:flex;gap:10px}
+.icon-btn{background:#2563eb;border:none;color:#fff;width:42px;height:42px;border-radius:50%;font-size:20px;cursor:pointer}
+.status-box,.order-card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
+.order-card{display:flex;gap:10px}
 .order-card img{width:80px;height:70px;object-fit:cover;border-radius:8px}
-.order-info{flex:1;font-size:13px}
-button.primary{margin-top:6px;background:#16a34a;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
-.modal-content{background:#fff;padding:20px;width:95%;max-width:600px;border-radius:15px;max-height:90vh;overflow:auto}
-input,select{width:100%;padding:10px;margin:6px 0;border-radius:8px;border:1px solid #ccc}
+button.primary{background:#16a34a;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
+button.warn{background:#f59e0b;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
+button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
 </style>
 </head>
 
@@ -31,137 +27,101 @@ input,select{width:100%;padding:10px;margin:6px 0;border-radius:8px;border:1px s
 <div class="main">
 
 <div class="top-bar">
- <h3>Delivery Dashboard</h3>
+ <h3>🚚 Delivery Dashboard</h3>
  <div>
-  <button class="icon-btn" onclick="openProfile()"><i class="bi bi-person-circle"></i></button>
-  <button class="icon-btn" onclick="setLiveLocation()"><i class="bi bi-geo-alt-fill"></i></button>
+  <button class="icon-btn" onclick="updateLocation()"><i class="bi bi-geo-alt-fill"></i></button>
   <button class="icon-btn" onclick="loadOrders()"><i class="bi bi-bag-check"></i></button>
  </div>
 </div>
 
 <div class="status-box">
- <b>Delivery Boy ID:</b> <span id="dbId"></span><br><br>
- <b>Status:</b> <span id="liveStatus">🟢 ACTIVE</span><br>
- <span class="location">📍 <span id="liveLoc">Location not set</span></span>
+ <b>ID:</b> <span id="dbId"></span><br>
+ <b>Status:</b> 🟢 ACTIVE<br>
+ <small id="locText">📍 Location not set</small>
 </div>
 
 <div id="orders"></div>
 </div>
 
-<!-- PROFILE -->
-<div class="modal" id="profileModal">
-<div class="modal-content">
- <h3>Delivery Boy Profile</h3>
- <input id="dName" placeholder="Name">
- <input id="dMobile" placeholder="UPI / Mobile">
- <input id="dLocation" placeholder="Address / Area">
- <select id="dVehicleType">
-  <option value="">Vehicle Type</option>
-  <option>2-Wheeler</option>
-  <option>3-Wheeler</option>
-  <option>4-Wheeler</option>
- </select>
- <input id="dVehicleNumber" placeholder="Vehicle Number">
- <select id="dStatus">
-  <option value="ACTIVE">🟢 ACTIVE</option>
-  <option value="BUSY">🔴 BUSY</option>
-  <option value="OFFLINE">⚫ OFFLINE</option>
- </select>
- <button class="primary" onclick="saveProfile()">Save Profile</button>
-</div>
-</div>
-
 <script>
-/* ===== AUTO LOCKED DELIVERY BOY ID ===== */
+const API = "https://shopbacked-vmhs.onrender.com";
 const deliveryBoyId = localStorage.getItem("userId");
 const role = localStorage.getItem("role");
+const TOKEN = localStorage.getItem("token");
 
 if(!deliveryBoyId || role!=="delivery"){
- alert("Please login again");
- window.location.href="index.html";
+ alert("Login again");
+ location.href="index.html";
 }
 
 dbId.innerText = deliveryBoyId.substring(0,8).toUpperCase();
 
-/* ===== PROFILE ===== */
-function openProfile(){
- let p = JSON.parse(localStorage.getItem("delivery_"+deliveryBoyId)||"{}");
- dName.value=p.name||"";
- dMobile.value=p.mobile||"";
- dLocation.value=p.location||"";
- dVehicleType.value=p.vehicleType||"";
- dVehicleNumber.value=p.vehicleNumber||"";
- dStatus.value=p.status||"ACTIVE";
- profileModal.style.display="flex";
-}
-
-function saveProfile(){
- let p={
-  id:deliveryBoyId,
-  name:dName.value,
-  mobile:dMobile.value,
-  location:dLocation.value,
-  vehicleType:dVehicleType.value,
-  vehicleNumber:dVehicleNumber.value,
-  status:dStatus.value
- };
- localStorage.setItem("delivery_"+deliveryBoyId,JSON.stringify(p));
- liveStatus.innerText = "● "+p.status;
- profileModal.style.display="none";
- alert("Profile Saved ✅");
-}
-
-/* ===== LIVE LOCATION ===== */
-function setLiveLocation(){
- if(!navigator.geolocation){
-  alert("GPS not supported");return;
- }
- navigator.geolocation.getCurrentPosition(pos=>{
-  let loc={
+/* ===== LIVE LOCATION TO SERVER ===== */
+function updateLocation(){
+ navigator.geolocation.getCurrentPosition(async pos=>{
+  const body={
+   deliveryBoyId,
    lat:pos.coords.latitude,
-   lng:pos.coords.longitude,
-   time:Date.now()
+   lng:pos.coords.longitude
   };
-  localStorage.setItem("liveLoc_"+deliveryBoyId,JSON.stringify(loc));
-  liveLoc.innerText = loc.lat.toFixed(5)+", "+loc.lng.toFixed(5);
-  alert("📍 Live Location Updated");
- },()=>alert("Location permission denied"));
+  await fetch(API+"/api/delivery/location",{
+   method:"POST",
+   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+   body:JSON.stringify(body)
+  });
+  locText.innerText=`📍 ${body.lat.toFixed(4)}, ${body.lng.toFixed(4)}`;
+  alert("Location updated");
+ });
 }
 
-let savedLoc = JSON.parse(localStorage.getItem("liveLoc_"+deliveryBoyId)||"null");
-if(savedLoc){
- liveLoc.innerText = savedLoc.lat.toFixed(5)+", "+savedLoc.lng.toFixed(5);
-}
+/* ===== LOAD ASSIGNED / AVAILABLE ORDERS ===== */
+async function loadOrders(){
+ const res = await fetch(API+"/api/orders/delivery/available",{
+  headers:{ "Authorization":"Bearer "+TOKEN }
+ });
+ const data = await res.json();
 
-/* ===== ORDERS ===== */
-function loadOrders(){
- let all = JSON.parse(localStorage.getItem("orders")||"[]");
- let available = all.filter(o=>o.status==="confirmed");
-
- orders.innerHTML = available.map(o=>`
+ orders.innerHTML = data.orders.map(o=>`
   <div class="order-card">
-   <img src="${o.productImg||'https://via.placeholder.com/80'}">
-   <div class="order-info">
-    <b>${o.product}</b><br>
+   <img src="${o.productImg}">
+   <div style="flex:1">
+    <b>${o.productName}</b><br>
     ₹${o.price}<br>
-    Retailer: ${o.retailerName}<br>
-    <button class="primary" onclick="acceptOrder(${o.orderId})">Accept</button>
+    🏪 ${o.shopName}<br>
+    🏬 ${o.retailerName}<br>
+    📞 ${o.retailerMobile}<br>
+
+    ${o.status==="delivery_assigned" ? `
+      <button class="primary" onclick="acceptOrder('${o._id}')">Accept Delivery</button>
+    `:""}
+
+    ${o.status==="delivery_accepted" ? `
+      <button class="warn" onclick="pickupOrder('${o._id}')">Picked Up</button>
+    `:""}
+
+    ${o.status==="pickup" ? `
+      <button class="done" onclick="deliverOrder('${o._id}')">Delivered</button>
+    `:""}
+
+    <div><small>Status: <b>${o.status}</b></small></div>
    </div>
   </div>
- `).join("") || "<p>No orders available</p>";
+ `).join("") || "<p>No orders</p>";
 }
 
-function acceptOrder(id){
- let all = JSON.parse(localStorage.getItem("orders")||"[]");
- all = all.map(o=>{
-  if(o.orderId===id){
-   o.status="pickup";
-   o.deliveryBoy=deliveryBoyId;
-  }
-  return o;
- });
- localStorage.setItem("orders",JSON.stringify(all));
- alert("Order Accepted ✅");
+/* ===== ACTIONS ===== */
+async function acceptOrder(id){
+ await fetch(API+"/api/orders/"+id+"/accept",{method:"POST"});
+ loadOrders();
+}
+
+async function pickupOrder(id){
+ await fetch(API+"/api/orders/"+id+"/pickup",{method:"POST"});
+ loadOrders();
+}
+
+async function deliverOrder(id){
+ await fetch(API+"/api/orders/"+id+"/delivered",{method:"POST"});
  loadOrders();
 }
 
