--- a/retailer.html
+++ b/retailer.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
@@ -27,65 +28,72 @@ input{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #c
 button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;border-radius:10px;cursor:pointer}
 img.full{width:100%;border-radius:10px;margin:10px 0}
 .order-status{background:#f8fafc;padding:10px;border-radius:10px;margin-top:10px}
-.step{font-size:12px;color:#999;margin:2px 0}
+.step{font-size:12px;color:#999}
 .step.active{color:#16a34a;font-weight:600}
 </style>
 </head>
+
 <body>
 <div class="main">
- <div class="icon-bar">
-   <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
-   <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
- </div>
- <div class="header">
-   <h3>Retailer Dashboard</h3>
- </div>
- <div class="header">
-   <input id="wid" placeholder="Enter Wholesaler ID (full ID)">
-   <button class="primary" onclick="loadProducts()">Search</button>
- </div>
- <div class="products-grid" id="products"></div>
+
+<div class="icon-bar">
+ <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
+ <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
 </div>
 
-<!-- DETAIL MODAL -->
+<div class="header">
+ <h3>Retailer Dashboard</h3>
+</div>
+
+<div class="header">
+ <input id="wid" placeholder="Enter Wholesaler ID (short / full)">
+ <button class="primary" onclick="loadProducts()">Search</button>
+</div>
+
+<div class="products-grid" id="products"></div>
+</div>
+
+<!-- PRODUCT DETAIL -->
 <div class="modal" id="detailModal">
- <div class="modal-content">
-   <div class="close-btn" onclick="closeAll()">✕</div>
-   <div class="buy-btn" onclick="openPayment()"><i class="bi bi-cart-plus"></i></div>
-   <h3 id="dName"></h3>
-   <img id="dImg" class="full">
-   <p id="dPrice" class="price"></p>
-   <p id="dDetail"></p>
-   <hr>
-   <p><b>Shop:</b> <span id="dShop"></span></p>
-   <p><b>Address:</b> <span id="dAddress"></span></p>
-   <p><b>Mobile / UPI:</b> <span id="dMobile"></span></p>
- </div>
+<div class="modal-content">
+ <div class="close-btn" onclick="closeAll()">✕</div>
+ <div class="buy-btn" onclick="openPayment()"><i class="bi bi-cart-plus"></i></div>
+ <h3 id="dName"></h3>
+ <img id="dImg" class="full">
+ <p id="dPrice" class="price"></p>
+ <p id="dDetail"></p>
+ <hr>
+ <p><b>Shop:</b> <span id="dShop"></span></p>
+ <p><b>Address:</b> <span id="dAddress"></span></p>
+ <p><b>Mobile / UPI:</b> <span id="dMobile"></span></p>
+</div>
 </div>
 
-<!-- PAYMENT MODAL -->
+<!-- PAYMENT -->
 <div class="modal" id="payModal">
- <div class="modal-content">
-   <h3>Payment & Proof</h3>
-   <p><b>Shop:</b> <span id="pShop"></span></p>
-   <p><b>UPI / Mobile:</b> <span id="pMobile"></span></p>
-   <img id="pImg" class="full">
-   <input id="rName" placeholder="Retailer Name">
-   <input id="rMobile" placeholder="Retailer Mobile">
-   <input id="txn" placeholder="Transaction ID">
-   <input id="proof" type="file" accept="image/*">
-   <button type="button" class="primary" onclick="submitOrder()">Submit Order</button>
-   <button type="button" onclick="closeAll()">Cancel</button>
- </div>
+<div class="modal-content">
+ <h3>Payment & Proof</h3>
+ <p><b>Shop:</b> <span id="pShop"></span></p>
+ <p><b>UPI:</b> <span id="pMobile"></span></p>
+ <img id="pImg" class="full">
+
+ <input id="rName" placeholder="Retailer Name">
+ <input id="rMobile" placeholder="Retailer Mobile">
+ <input id="txn" placeholder="Transaction ID">
+ <input id="proof" type="file" accept="image/*">
+
+ <button class="primary" onclick="submitOrder()">Submit Order</button>
+ <button onclick="closeAll()">Cancel</button>
+</div>
 </div>
 
-<!-- MY ORDERS MODAL -->
+<!-- ORDERS -->
 <div class="modal" id="ordersModal">
- <div class="modal-content">
-   <div class="close-btn" onclick="closeAll()">✕</div>
-   <h3>My Orders</h3>
-   <div id="myOrders"></div>
- </div>
+<div class="modal-content">
+ <div class="close-btn" onclick="closeAll()">✕</div>
+ <h3>My Orders</h3>
+ <div id="myOrders"></div>
+</div>
 </div>
 
 <script>
@@ -93,17 +101,30 @@ const API="https://shopbacked-vmhs.onrender.com";
 const TOKEN=localStorage.getItem("token");
 let selectedProduct=null;
 
+/* LOAD PRODUCTS */
 async function loadProducts(){
- const wholesalerId=wid.value.trim();
- if(!wholesalerId) return alert("Enter Wholesaler ID");
- try{
-   const res=await fetch(`${API}/api/products/wholesaler/${wholesalerId}`,{headers:{"Authorization":"Bearer "+TOKEN}});
-   const data=await res.json();
-   if(!data.success || !data.products.length){ products.innerHTML="No products found"; return; }
-   products.innerHTML=data.products.map(p=>`<div class="product-card" onclick='showDetail(${JSON.stringify(p)})'><img src="${p.image}"><h4>${p.productName}</h4><div class="price">₹${p.price}</div></div>`).join("");
- }catch(err){console.log(err); products.innerHTML="Server error";}
+ const id=wid.value.trim();
+ if(!id) return alert("Enter Wholesaler ID");
+
+ const res=await fetch(`${API}/api/products/wholesaler/${id}`,{
+  headers:{Authorization:"Bearer "+TOKEN}
+ });
+ const data=await res.json();
+
+ if(!data.success || !data.products.length){
+  products.innerHTML="No products found";
+  return;
+ }
+
+ products.innerHTML=data.products.map(p=>`
+  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+   <img src="${p.image}">
+   <h4>${p.productName}</h4>
+   <div class="price">₹${p.price}</div>
+  </div>`).join("");
 }
 
+/* SHOW DETAIL */
 function showDetail(p){
  selectedProduct=p;
  dName.innerText=p.productName;
@@ -116,6 +137,7 @@ function showDetail(p){
  detailModal.style.display="flex";
 }
 
+/* OPEN PAYMENT */
 function openPayment(){
  pShop.innerText=selectedProduct.shopName;
  pMobile.innerText=selectedProduct.mobile;
@@ -123,36 +145,67 @@ function openPayment(){
  payModal.style.display="flex";
 }
 
+/* SUBMIT ORDER */
 async function submitOrder(){
- const name=rName.value.trim();
- const mobile=rMobile.value.trim();
- const txnId=txn.value.trim();
- const proofFile=proof.files[0];
- if(!name||!mobile||!txnId||!proofFile){ alert("All fields required"); return; }
+ if(!rName.value||!rMobile.value||!txn.value||!proof.files[0]){
+  alert("All fields required"); return;
+ }
+
  const reader=new FileReader();
- reader.onload=async ()=>{
-   const body={wholesalerId:selectedProduct.wholesalerId,productId:selectedProduct._id,productName:selectedProduct.productName,price:selectedProduct.price,productImg:selectedProduct.image,retailerName:name,retailerMobile:mobile,txnId:txnId,proofImg:reader.result};
-   try{
-     const res=await fetch(`${API}/api/orders`,{method:"POST",headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},body:JSON.stringify(body)});
-     const data=await res.json();
-     if(data.success){ alert("Order placed ✅"); closeAll(); } else alert(data.message||"Order failed");
-   }catch(err){console.log(err); alert("Server error");}
+ reader.onload=async()=>{
+  const body={
+   wholesalerId:selectedProduct.wholesalerId,
+   productId:selectedProduct._id,
+   productName:selectedProduct.productName,
+   price:selectedProduct.price,
+   productImg:selectedProduct.image,
+   retailerName:rName.value,
+   retailerMobile:rMobile.value,
+   txnId:txn.value,
+   proofImg:reader.result
+  };
+
+  const res=await fetch(API+"/api/orders",{
+   method:"POST",
+   headers:{
+    "Content-Type":"application/json",
+    "Authorization":"Bearer "+TOKEN
+   },
+   body:JSON.stringify(body)
+  });
+
+  const data=await res.json();
+  if(data.success){
+   alert("Order placed (Pending) ✅");
+   closeAll();
+  }else alert("Order failed");
  };
- reader.readAsDataURL(proofFile);
+ reader.readAsDataURL(proof.files[0]);
 }
 
+/* MY ORDERS */
 async function openOrders(){
  ordersModal.style.display="flex";
- const mobile=rMobile.value.trim();
- if(!mobile){ myOrders.innerHTML="Enter mobile number first"; return; }
- try{
-   const res=await fetch(`${API}/api/orders/retailer/${mobile}`,{headers:{"Authorization":"Bearer "+TOKEN}});
-   const data=await res.json();
-   myOrders.innerHTML=data.orders.map(o=>`<div class="order-status"><b>${o.productName}</b> (₹${o.price})<div class="step ${o.status==='pending'?'active':''}">● PENDING</div><div class="step ${o.status==='confirmed'?'active':''}">● CONFIRMED</div><div class="step ${o.status==='pickup'?'active':''}">● PICKUP</div><div class="step ${o.status==='delivered'?'active':''}">● DELIVERED</div></div>`).join("")||"No orders";
- }catch(err){console.log(err); myOrders.innerHTML="Server error";}
+ const mobile=prompt("Enter your mobile number");
+ if(!mobile) return;
+
+ const res=await fetch(`${API}/api/orders/retailer/${mobile}`);
+ const data=await res.json();
+
+ myOrders.innerHTML=data.orders.map(o=>`
+  <div class="order-status">
+   <b>${o.productName}</b> ₹${o.price}
+   <div class="step ${o.status==="pending"?"active":""}">● Pending</div>
+   <div class="step ${o.status==="confirmed"?"active":""}">● Confirmed</div>
+   <div class="step ${o.status==="pickup"?"active":""}">● Pickup</div>
+   <div class="step ${o.status==="delivered"?"active":""}">● Delivered</div>
+  </div>
+ `).join("") || "No orders";
 }
 
-function closeAll(){ document.querySelectorAll(".modal").forEach(m=>m.style.display="none"); }
+function closeAll(){
+ document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+}
 </script>
 </body>
 </html>
