--- a/delivery.html
+++ b/delivery.html
@@ -14,14 +14,16 @@ body{margin:0;background:#f3f6fb}
 .main{padding:15px;max-width:900px;margin:auto}
 .top-bar{display:flex;justify-content:space-between;align-items:center;background:#0f172a;color:#fff;padding:12px 16px;border-radius:14px}
 .icon-btn{background:#2563eb;border:none;color:#fff;width:42px;height:42px;border-radius:50%;font-size:20px;cursor:pointer}
-.status-box,.order-card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
-.order-card{display:flex;gap:10px}
-.order-card img{width:80px;height:70px;object-fit:cover;border-radius:8px}
-button.primary{background:#16a34a;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-button.warn{background:#f59e0b;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-input{width:100%;padding:7px;border-radius:6px;border:1px solid #ccc;margin-top:5px}
-.small{font-size:12px;color:#555}
+.card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
+.order{display:flex;gap:10px}
+.order img{width:90px;height:75px;border-radius:8px;object-fit:cover}
+button{border:none;border-radius:8px;padding:6px 12px;margin-top:6px;cursor:pointer}
+.accept{background:#16a34a;color:#fff}
+.pickup{background:#f59e0b;color:#fff}
+.done{background:#2563eb;color:#fff}
+input{width:100%;padding:8px;margin-top:6px;border-radius:8px;border:1px solid #ccc}
+.status{font-size:12px;margin-top:5px}
+small{color:#475569}
 </style>
 </head>
 
@@ -31,127 +33,134 @@ input{width:100%;padding:7px;border-radius:6px;border:1px solid #ccc;margin-top:
 <div class="top-bar">
  <h3>🚚 Delivery Dashboard</h3>
  <div>
-  <button class="icon-btn" onclick="updateLocation()"><i class="bi bi-geo-alt-fill"></i></button>
-  <button class="icon-btn" onclick="loadOrders()"><i class="bi bi-bag-check"></i></button>
+  <button class="icon-btn" onclick="updateLocation()"><i class="bi bi-geo-alt"></i></button>
+  <button class="icon-btn" onclick="loadOrders()"><i class="bi bi-bell"></i></button>
  </div>
 </div>
 
-<div class="status-box">
+<div class="card">
  <b>ID:</b> <span id="dbId"></span><br>
- <b>Status:</b> 🟢 ACTIVE<br>
  <small id="locText">📍 Location not set</small>
 </div>
 
 <div id="orders"></div>
+
 </div>
 
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
-const TOKEN=localStorage.getItem("token");
 const deliveryBoyId=localStorage.getItem("userId");
-const role=localStorage.getItem("role");
+const TOKEN=localStorage.getItem("token");
 
-if(!deliveryBoyId || role!=="delivery"){
- alert("Login again");
- location.href="index.html";
-}
+dbId.innerText=deliveryBoyId?.substring(0,8)||"UNKNOWN";
 
-dbId.innerText=deliveryBoyId.substring(0,8).toUpperCase();
 let myLocation=null;
 
-/* ===== LOCATION ===== */
+/* ================= LOCATION ================= */
 function updateLocation(){
  navigator.geolocation.getCurrentPosition(async pos=>{
   myLocation={
    lat:pos.coords.latitude,
    lng:pos.coords.longitude
   };
+  locText.innerText=`📍 ${myLocation.lat.toFixed(4)}, ${myLocation.lng.toFixed(4)}`;
+
   await fetch(API+"/api/delivery/location",{
    method:"POST",
-   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+   headers:{
+    "Content-Type":"application/json",
+    "Authorization":"Bearer "+TOKEN
+   },
    body:JSON.stringify({deliveryBoyId,...myLocation})
   });
-  locText.innerText=`📍 ${myLocation.lat.toFixed(4)}, ${myLocation.lng.toFixed(4)}`;
-  alert("Location updated");
  });
 }
 
-/* ===== DISTANCE ===== */
-function distance(lat1,lon1,lat2,lon2){
+/* ================= DISTANCE ================= */
+function getDistance(lat1,lng1,lat2,lng2){
  const R=6371;
  const dLat=(lat2-lat1)*Math.PI/180;
- const dLon=(lon2-lon1)*Math.PI/180;
+ const dLng=(lng2-lng1)*Math.PI/180;
  const a=Math.sin(dLat/2)**2+
- Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*
- Math.sin(dLon/2)**2;
+         Math.cos(lat1*Math.PI/180)*
+         Math.cos(lat2*Math.PI/180)*
+         Math.sin(dLng/2)**2;
  return (R*2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a))).toFixed(2);
 }
 
-/* ===== LOAD ORDERS ===== */
+/* ================= LOAD ORDERS ================= */
 async function loadOrders(){
- const r=await fetch(API+"/api/orders/delivery/available",{
+ const res=await fetch(API+"/api/orders/delivery/all",{
   headers:{Authorization:"Bearer "+TOKEN}
  });
- const d=await r.json();
+ const data=await res.json();
 
- orders.innerHTML=d.orders.map(o=>{
-  if(o.vehicleType && o.vehicleType!==d.myVehicle) return "";
-
-  const dist=myLocation && o.shopLat
-   ? distance(myLocation.lat,myLocation.lng,o.shopLat,o.shopLng)+" km"
-   : "N/A";
+ orders.innerHTML=(data.orders||[]).map(o=>{
+  let dist="N/A";
+  if(myLocation && o.shopLat){
+   dist=getDistance(myLocation.lat,myLocation.lng,o.shopLat,o.shopLng)+" km";
+  }
 
   return `
-  <div class="order-card">
+  <div class="card order">
    <img src="${o.productImg}">
    <div style="flex:1">
     <b>${o.productName}</b> ₹${o.price}<br>
+
     🏪 ${o.shopName}<br>
     📍 ${o.shopAddress}<br>
-    📞 ${o.shopMobile}<br>
-    🚗 Required: <b>${o.vehicleType}</b><br>
-    📏 Distance: <b>${dist}</b>
+    📞 ${o.shopMobile}<br><br>
 
-    ${o.status==="assigned_to_delivery"?`
-     <button class="primary" onclick="acceptOrder('${o._id}')">Accept</button>`:""}
+    🏬 ${o.retailerName}<br>
+    📞 ${o.retailerMobile}<br>
+
+    🚗 Vehicle: <b>${o.vehicleType}</b><br>
+    📏 Distance: ${dist}
+
+    <div class="status">Status: <b>${o.status}</b></div>
+
+    ${o.status==="confirmed"?`
+     <button class="accept" onclick="acceptOrder('${o._id}')">Accept</button>`:""}
 
     ${o.status==="delivery_accepted"?`
-     <button class="warn" onclick="pickupOrder('${o._id}')">Pickup</button>`:""}
+     <button class="pickup" onclick="pickupOrder('${o._id}')">Order Pickup</button>`:""}
 
     ${o.status==="picked_up"?`
-     <input placeholder="Enter OTP" id="otp_${o._id}">
+     <input placeholder="Enter Delivery OTP" id="otp-${o._id}">
      <button class="done" onclick="deliverOrder('${o._id}')">Submit</button>`:""}
-
-    <div class="small">Status: <b>${o.status}</b></div>
    </div>
   </div>`;
- }).join("") || "<p>No orders</p>";
+ }).join("") || "<p>No notifications</p>";
 }
 
-/* ===== ACTIONS ===== */
+/* ================= ACTIONS ================= */
 async function acceptOrder(id){
- await fetch(API+"/api/orders/"+id+"/delivery-accept",{method:"POST"});
+ await fetch(API+"/api/orders/"+id+"/accept",{method:"POST"});
  loadOrders();
 }
 
 async function pickupOrder(id){
  await fetch(API+"/api/orders/"+id+"/pickup",{method:"POST"});
- alert("OTP sent to retailer");
  loadOrders();
 }
 
 async function deliverOrder(id){
- const otp=document.getElementById("otp_"+id).value;
- if(!otp) return alert("Enter OTP");
- await fetch(API+"/api/orders/"+id+"/delivered",{
+ const otp=document.getElementById("otp-"+id).value;
+ if(!otp) return alert("OTP required");
+
+ const res=await fetch(API+"/api/orders/"+id+"/delivered",{
   method:"POST",
   headers:{"Content-Type":"application/json"},
   body:JSON.stringify({otp})
  });
- loadOrders();
+
+ const data=await res.json();
+ if(data.success){
+  alert("Order Delivered ✅");
+  setTimeout(loadOrders,10000);
+ }else alert("Wrong OTP ❌");
 }
 
-loadOrders();
 setInterval(loadOrders,5000);
 </script>
 </body>
