--- a/delivery.html
+++ b/delivery.html
@@ -11,59 +11,123 @@
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
+
 .main{padding:15px;max-width:900px;margin:auto}
-.top-bar{display:flex;justify-content:space-between;align-items:center;background:#0f172a;color:#fff;padding:12px 16px;border-radius:14px}
-.icon-btn{background:#2563eb;border:none;color:#fff;width:42px;height:42px;border-radius:50%;font-size:20px;cursor:pointer}
-.card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
-.order{display:flex;gap:10px}
-.order img{width:90px;height:75px;border-radius:8px;object-fit:cover}
-button{border:none;border-radius:8px;padding:6px 12px;margin-top:6px;cursor:pointer}
-.accept{background:#16a34a;color:#fff}
-.pickup{background:#f59e0b;color:#fff}
-.done{background:#2563eb;color:#fff}
-input{width:100%;padding:8px;margin-top:6px;border-radius:8px;border:1px solid #ccc}
-.status{font-size:12px;margin-top:5px}
-small{color:#475569}
+
+.top-bar{
+ display:flex;justify-content:space-between;align-items:center;
+ background:#0f172a;color:#fff;
+ padding:12px 16px;border-radius:14px
+}
+.icon-btn{
+ background:#2563eb;border:none;color:#fff;
+ width:42px;height:42px;border-radius:50%;
+ font-size:20px;cursor:pointer
+}
+
+.status-box,.order-card{
+ background:#fff;margin-top:12px;padding:12px;
+ border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)
+}
+
+.order-card{display:flex;gap:10px}
+.order-card img{
+ width:80px;height:70px;object-fit:cover;border-radius:8px
+}
+
+button.primary{background:#16a34a;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
+button.warn{background:#f59e0b;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
+button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
+
+/* MODAL */
+.modal{
+ position:fixed;inset:0;
+ background:rgba(0,0,0,.5);
+ display:none;align-items:center;justify-content:center;
+ z-index:50
+}
+.modal-content{
+ background:#fff;padding:20px;
+ width:90%;max-width:400px;
+ border-radius:14px
+}
+input,select{
+ width:100%;padding:10px;margin:8px 0;
+ border-radius:8px;border:1px solid #ccc
+}
 </style>
 </head>
 
 <body>
 <div class="main">
 
+<!-- TOP BAR -->
 <div class="top-bar">
  <h3>🚚 Delivery Dashboard</h3>
  <div>
-  <button class="icon-btn" onclick="updateLocation()"><i class="bi bi-geo-alt"></i></button>
-  <button class="icon-btn" onclick="loadOrders()"><i class="bi bi-bell"></i></button>
+  <button class="icon-btn" onclick="updateLocation()">
+   <i class="bi bi-geo-alt-fill"></i>
+  </button>
+  <button class="icon-btn" onclick="openProfile()">
+   <i class="bi bi-person-circle"></i>
+  </button>
+  <button class="icon-btn" onclick="loadOrders()">
+   <i class="bi bi-bell-fill"></i>
+  </button>
  </div>
 </div>
 
-<div class="card">
+<!-- STATUS -->
+<div class="status-box">
  <b>ID:</b> <span id="dbId"></span><br>
+ <b>Status:</b> 🟢 ACTIVE<br>
  <small id="locText">📍 Location not set</small>
 </div>
 
+<!-- ORDERS -->
 <div id="orders"></div>
+</div>
 
+<!-- PROFILE MODAL -->
+<div class="modal" id="profileModal">
+ <div class="modal-content">
+  <h3>👤 Delivery Profile</h3>
+
+  <input id="pName" placeholder="Full Name">
+  <input id="pMobile" placeholder="Mobile Number">
+
+  <select id="pVehicle">
+   <option value="">Select Vehicle Type</option>
+   <option value="two">Two Wheeler</option>
+   <option value="three">Three Wheeler</option>
+   <option value="four">Four Wheeler</option>
+  </select>
+
+  <input id="pVehicleNo" placeholder="Vehicle Number">
+
+  <button class="primary" onclick="saveProfile()">Save</button>
+  <button onclick="closeProfile()">Close</button>
+ </div>
 </div>
 
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
 const deliveryBoyId=localStorage.getItem("userId");
+const role=localStorage.getItem("role");
 const TOKEN=localStorage.getItem("token");
 
-dbId.innerText=deliveryBoyId?.substring(0,8)||"UNKNOWN";
+if(!deliveryBoyId || role!=="delivery"){
+ alert("Login again");
+ location.href="index.html";
+}
 
-let myLocation=null;
+dbId.innerText=deliveryBoyId.substring(0,8).toUpperCase();
 
-/* ================= LOCATION ================= */
+/* ===== LOCATION ===== */
 function updateLocation(){
  navigator.geolocation.getCurrentPosition(async pos=>{
-  myLocation={
-   lat:pos.coords.latitude,
-   lng:pos.coords.longitude
-  };
-  locText.innerText=`📍 ${myLocation.lat.toFixed(4)}, ${myLocation.lng.toFixed(4)}`;
+  const lat=pos.coords.latitude;
+  const lng=pos.coords.longitude;
 
   await fetch(API+"/api/delivery/location",{
    method:"POST",
@@ -71,96 +135,84 @@ function updateLocation(){
     "Content-Type":"application/json",
     "Authorization":"Bearer "+TOKEN
    },
-   body:JSON.stringify({deliveryBoyId,...myLocation})
+   body:JSON.stringify({deliveryBoyId,lat,lng})
   });
+
+  locText.innerText=`📍 ${lat.toFixed(4)}, ${lng.toFixed(4)}`;
+  alert("Location updated");
  });
 }
 
-/* ================= DISTANCE ================= */
-function getDistance(lat1,lng1,lat2,lng2){
- const R=6371;
- const dLat=(lat2-lat1)*Math.PI/180;
- const dLng=(lng2-lng1)*Math.PI/180;
- const a=Math.sin(dLat/2)**2+
-         Math.cos(lat1*Math.PI/180)*
-         Math.cos(lat2*Math.PI/180)*
-         Math.sin(dLng/2)**2;
- return (R*2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a))).toFixed(2);
-}
-
-/* ================= LOAD ORDERS ================= */
+/* ===== ORDERS ===== */
 async function loadOrders(){
- const res=await fetch(API+"/api/orders/delivery/all",{
+ const res=await fetch(API+"/api/orders/delivery/available",{
   headers:{Authorization:"Bearer "+TOKEN}
  });
  const data=await res.json();
 
- orders.innerHTML=(data.orders||[]).map(o=>{
-  let dist="N/A";
-  if(myLocation && o.shopLat){
-   dist=getDistance(myLocation.lat,myLocation.lng,o.shopLat,o.shopLng)+" km";
-  }
+ orders.innerHTML=data.orders.map(o=>`
+ <div class="order-card">
+  <img src="${o.productImg}">
+  <div style="flex:1">
+   <b>${o.productName}</b><br>
+   ₹${o.price}<br>
+   🏪 ${o.shopName || "-"}<br>
+   🏬 ${o.retailerName}<br>
+   📞 ${o.retailerMobile}<br>
+   🚗 Vehicle: ${o.vehicle || "Any"}<br>
 
-  return `
-  <div class="card order">
-   <img src="${o.productImg}">
-   <div style="flex:1">
-    <b>${o.productName}</b> ₹${o.price}<br>
+   ${o.status==="confirmed_by_wholesaler"?
+    `<button class="primary" onclick="acceptOrder('${o._id}')">Accept</button>`:""}
 
-    🏪 ${o.shopName}<br>
-    📍 ${o.shopAddress}<br>
-    📞 ${o.shopMobile}<br><br>
+   ${o.status==="delivery_accepted"?
+    `<button class="warn" onclick="pickupOrder('${o._id}')">Picked Up</button>`:""}
 
-    🏬 ${o.retailerName}<br>
-    📞 ${o.retailerMobile}<br>
+   ${o.status==="picked_up"?
+    `<button class="done" onclick="deliverOrder('${o._id}')">Delivered</button>`:""}
 
-    🚗 Vehicle: <b>${o.vehicleType}</b><br>
-    📏 Distance: ${dist}
-
-    <div class="status">Status: <b>${o.status}</b></div>
-
-    ${o.status==="confirmed"?`
-     <button class="accept" onclick="acceptOrder('${o._id}')">Accept</button>`:""}
-
-    ${o.status==="delivery_accepted"?`
-     <button class="pickup" onclick="pickupOrder('${o._id}')">Order Pickup</button>`:""}
-
-    ${o.status==="picked_up"?`
-     <input placeholder="Enter Delivery OTP" id="otp-${o._id}">
-     <button class="done" onclick="deliverOrder('${o._id}')">Submit</button>`:""}
-   </div>
-  </div>`;
- }).join("") || "<p>No notifications</p>";
+   <div><small>Status: <b>${o.status}</b></small></div>
+  </div>
+ </div>
+ `).join("") || "<p>No orders</p>";
 }
 
-/* ================= ACTIONS ================= */
+/* ===== ACTIONS ===== */
 async function acceptOrder(id){
- await fetch(API+"/api/orders/"+id+"/accept",{method:"POST"});
+ await fetch(API+"/api/orders/"+id+"/delivery-accept",{method:"POST"});
  loadOrders();
 }
-
 async function pickupOrder(id){
  await fetch(API+"/api/orders/"+id+"/pickup",{method:"POST"});
  loadOrders();
 }
-
 async function deliverOrder(id){
- const otp=document.getElementById("otp-"+id).value;
- if(!otp) return alert("OTP required");
-
- const res=await fetch(API+"/api/orders/"+id+"/delivered",{
-  method:"POST",
-  headers:{"Content-Type":"application/json"},
-  body:JSON.stringify({otp})
- });
-
- const data=await res.json();
- if(data.success){
-  alert("Order Delivered ✅");
-  setTimeout(loadOrders,10000);
- }else alert("Wrong OTP ❌");
+ await fetch(API+"/api/orders/"+id+"/delivered",{method:"POST"});
+ loadOrders();
 }
 
+/* ===== PROFILE ===== */
+function openProfile(){
+ profileModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("deliveryProfile_"+deliveryBoyId)||"{}");
+ pName.value=p.name||"";
+ pMobile.value=p.mobile||"";
+ pVehicle.value=p.vehicle||"";
+ pVehicleNo.value=p.vehicleNo||"";
+}
+function closeProfile(){profileModal.style.display="none";}
+function saveProfile(){
+ const profile={
+  name:pName.value,
+  mobile:pMobile.value,
+  vehicle:pVehicle.value,
+  vehicleNo:pVehicleNo.value
+ };
+ localStorage.setItem("deliveryProfile_"+deliveryBoyId,JSON.stringify(profile));
+ alert("Profile saved ✅");
+ closeProfile();
+}
+
+loadOrders();
 setInterval(loadOrders,5000);
 </script>
 </body>
